<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="property"
            type="com.whoisasheesh.realestate.data.Property" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/r1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_property_thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:contentDescription="property_img"
                    android:scaleType="centerCrop" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_property_thumbnail"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/l1_property_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@id/l1_agent_holder"
                        android:gravity="start"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_property_status"
                            style="@style/TextViewStyle"
                            android:layout_below="@+id/iv_property_thumbnail"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="6dp"
                            android:background="@drawable/bg_style"
                            android:paddingStart="8dp"
                            android:paddingTop="4dp"
                            android:paddingEnd="8dp"
                            android:paddingBottom="4dp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/titleTextSize"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_address"
                            style="@style/TextViewStyle"
                            android:layout_below="@+id/iv_property_thumbnail"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/normalTextSize" />

                        <TextView
                            android:id="@+id/tv_suburb_postcode"
                            style="@style/TextViewStyle"
                            android:layout_below="@+id/iv_property_thumbnail"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/normalTextSize" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal"
                            android:baselineAligned="false">

                            <LinearLayout
                                android:id="@+id/l1_bedroom_icon_holder"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tv_bedroom_count"
                                    style="@style/TextViewStyle"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/smallTextSize" />

                                <ImageView
                                    android:id="@+id/iv_bed_icon"
                                    android:layout_width="18dp"
                                    android:layout_height="18dp"
                                    android:layout_marginStart="4dp"
                                    android:src="@drawable/ic_bedroom"
                                    android:contentDescription="@string/bed_count" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/l1_bathroom_icon_holder"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/smallMargin"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                tools:ignore="UseCompoundDrawables">

                                <TextView
                                    android:id="@+id/tv_bathroom_count"
                                    style="@style/TextViewStyle"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/smallTextSize" />

                                <ImageView
                                    android:id="@+id/iv_bath_icon"
                                    android:layout_width="18dp"
                                    android:layout_height="18dp"
                                    android:layout_marginStart="4dp"
                                    android:src="@drawable/ic_bathtub"
                                    android:contentDescription="@string/bath_count" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/l1_carspace_icon_holder"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/smallMargin"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                tools:ignore="UseCompoundDrawables">

                                <TextView
                                    android:id="@+id/tv_carspace_count"
                                    style="@style/TextViewStyle"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/smallTextSize" />

                                <ImageView
                                    android:id="@+id/iv_car_icon"
                                    android:layout_width="18dp"
                                    android:layout_height="18dp"
                                    android:layout_marginStart="4dp"
                                    android:src="@drawable/ic_car"
                                    android:contentDescription="@string/carspace_count" />
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/l1_agent_holder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/iv_agent_icon"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_marginTop="2dp"
                            app:civ_border_color="#ffffff"
                            app:civ_border_width="0.4dp" />

                        <TextView
                            android:id="@+id/tv_agent_name"
                            style="@style/TextViewStyle"
                            android:letterSpacing="-0.07"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/smallTextSize" />


                    </LinearLayout>
                </RelativeLayout>

            </RelativeLayout>

            <View
                android:id="@+id/view1"
                style="@style/DividerStyleHorizontal"
                android:layout_height="0.8dp"
                android:background="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@id/r1"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/l1_price_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/view1"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    style="@style/TextViewStyle"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="@dimen/titleTextSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_price"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:background="@drawable/bg_transparent_style"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:id="@+id/view2"
                style="@style/DividerStyleHorizontal"
                android:layout_height="0.8dp"
                android:background="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@+id/l1_price_holder"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/l1_description_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/view2"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    style="@style/TextViewStyle"
                    android:background="@drawable/bg_style"
                    android:paddingStart="@dimen/margin_16dp"
                    android:paddingTop="@dimen/margin_8dp"
                    android:paddingEnd="@dimen/margin_16dp"
                    android:paddingBottom="@dimen/margin_8dp"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/titleTextSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_description"
                    style="@style/TextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_transparent_style"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>